# test3

./: push-to-github.ps1
assignment-3-nbaliyan260-main/: COMMANDS_TO_RUN.md  README.md  STEPS_COMMANDS.txt  WORK_COMPLETED.md
assignment-3-nbaliyan260-main/evidence/: README.md
assignment-3-nbaliyan260-main/evidence/exercise1/: exercise1_completed.md
assignment-3-nbaliyan260-main/evidence/exercise2/: ex2_profile_log_device.csv  exercise2_output.txt
assignment-3-nbaliyan260-main/evidence/exercise3/: ex3_profile_log_device.csv  exercise3_output.txt
assignment-3-nbaliyan260-main/evidence/exercise4/: ex4_profile_log_device.csv  exercise4_output.txt
assignment-3-nbaliyan260-main/evidence/lab2_baseline/: lab2_ex2_profile_log_device.csv
assignment-3-nbaliyan260-main/evidence/performance/: performance_comparison.md
assignment-3-nbaliyan260-main/lab3_ex2/: CMakeLists.txt  lab3_ex2.cpp
assignment-3-nbaliyan260-main/lab3_ex2/kernels/dataflow/: mcast_receiver.cpp  mcast_sender.cpp  write_tiles.cpp
assignment-3-nbaliyan260-main/lab3_ex3/: CMakeLists.txt  lab3_ex3.cpp
assignment-3-nbaliyan260-main/lab3_ex3/kernels/compute/: tiles_copy.cpp
assignment-3-nbaliyan260-main/lab3_ex4/: CMakeLists.txt  lab3_ex4.cpp
assignment-3-nbaliyan260-main/lab3_ex4/kernels/compute/: tiles_matmul_reuse.cpp
assignment-3-nbaliyan260-main/lab3_ex4/kernels/dataflow/: reader_interior.cpp  reader_left_col.cpp  reader_top_left.cpp  reader_top_row.cpp  write_tiles_reuse.cpp
assignment-3-nbaliyan260-main/scripts/: run_profiler_comparison.sh
(+2 files in other folders)
